# ckqa

./: .codex  .gitignore  AGENTS.md  README.en.md  README.md  ckqa.code-workspace  package.json
graphrag_pipeline/: CLAUDE.md  PROMPT_TUNING_OPTIMIZATION_PLAN.md  PROMPT_TUNING_PIPELINE.md  README.md  pyproject.toml  requirements.txt  settings.yaml
graphrag_pipeline/docs/: prompt_tuning_pipeline_report.md  prompt_tuning_production_guide.md  prompt_tuning_session_summary_20260512.md
graphrag_pipeline/prompts/: community_report_graph.txt  extract_claims.txt  extract_graph.txt  hybrid_v0_system_prompt.txt  summarize_descriptions.txt
graphrag_pipeline/scripts/: README.md  _compat_wrapper.py  annotate_os_eval_text_units.py  backfill_qa_answer_citations.py  build_audit_extraction_set.py  build_os_eval_sets.py  build_prompt_tuning_samples.py  cleanup_course_router_profiles.py  compare_native_extraction_runs.py  diagnose_gold_missing_relations.py  diagnose_step8.py  extract_course_profile_hints.py  extraction_parser.py  extraction_schema.py  finalize_candidate_prompt.py  generate_candidate_prompts.py  llm_client.py  migrate_manual_index_to_build_run.py  postprocess_extraction_results.py  prompt_loader.py  prompt_renderer.py  result_writer.py  run_candidate_extraction.py  run_graphrag_history_poc_eval.py  run_graphrag_index.py  run_graphrag_prompt_tune.py  run_material_prompt_pipeline.py  run_material_qa_smoke.py  run_native_extraction.py  score_extraction_results.py  scoring_audit.py  scoring_metrics.py  scoring_report.py  simulate_container_seed_injection.py
graphrag_pipeline/tests/: test_annotate_os_eval_text_units.py  test_api_runtime_config.py  test_backfill_qa_answer_citations.py  test_build_audit_extraction_set.py  test_build_os_eval_sets.py  test_course_profile_hints.py  test_course_routing_embedding_service.py  test_diagnose_gold_missing_relations.py  test_diagnose_step8.py  test_extraction_parser.py  test_fetch_from_minio.py  test_fetch_from_minio_paths.py  test_finalize_candidate_prompt.py  test_generate_candidate_prompts.py  test_generate_candidate_prompts_v2.py  test_hybrid_qa_v0_basic_local_client.py  test_hybrid_qa_v0_bm25_text_units.py  test_hybrid_qa_v0_evidence_fusion.py  test_hybrid_qa_v0_evidence_guardrail.py  test_hybrid_qa_v0_evidence_selector.py  test_hybrid_qa_v0_main_route.py  test_hybrid_qa_v0_orchestrator.py  test_hybrid_qa_v0_prompt_builder.py  test_hybrid_qa_v0_question_classifier.py  test_hybrid_qa_v0_synthesis_client.py  test_hybrid_qa_v0_types.py  test_llm_client.py  test_main_cli_mode.py  test_prompt_renderer.py  test_qa_eval_algorithmic_dependencies.py  test_qa_eval_algorithmic_metrics.py  test_qa_eval_algorithmic_scorer.py  test_qa_eval_algorithmic_seed_builder.py  test_qa_eval_bm25_retrieval_bakeoff.py  test_qa_eval_bootstrap_stats.py  test_qa_eval_client.py  test_qa_eval_factuality_extra_exporter.py  test_qa_eval_global_cli_tuning.py  test_qa_eval_hybrid_v0_compare.py  test_qa_eval_hybrid_v0_diagnostics_report.py  (+30 more)
graphrag_pipeline/utils/: apiTest.py  api_runtime_config.py  (+13 more)
pdf_ingest/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
(+1782 files in other folders)
